--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=gmf-core
-spring.datasource.url=jdbc:mysql://localhost:3306/gmf?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+jwt.secret=${JWT_SECRET}
+jwt.expiration=3600000
+
+spring.sql.init.mode=always
+logging.level.org.springframework.jdbc.core=DEBUG
