--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=gmf-core
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bddgmf?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
